samples/_failures_safe/1761072548_50d2aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df68ef63.c: In function ‘main’:
./samples/SAFE/__tmp_df68ef63.c:178:5: error: expected declaration or statement at end of input
  178 |     return 0;
      |     ^~~~~~
